WC01 Part (a) Done

--- a/wc01.tex
+++ b/wc01.tex
@@ -33,6 +33,11 @@ Schmidty \cite{schmidt} has grown old and his vision is weak. He can no longer s
 \end{minipage}
 \begin{solution}
     % Enter your solution here.
+    (a) Schmidty can first divide the family into two groups of 3 and 2 respectively, it doesn't matter how he does it, only that he divides the family of 5 into two groups of 3 and 2. \\ 
+    He uses his sensor first at the group of 3. If it does not beep, then he can infer that the group of 2 will have the person with height less than the limit. So he can again divide the group of 2 into individuals, and apply the sensor a second time on either of the person. If it the sensor beeps, then we have found our person. If the sensor does not beep at the person, then the sensor can be applied a third time on the last person, in which case it will beep. \\ 
+    If the sensor does beep at the group of 3 people in the first application, then he can again divide the group of 3 into a group of 2 and 1 (again the order does not matter). He applied the sensor then a second time at the group of 2; if it does not beep, then the last person will be the one with height less than the limit and a third application of the sensor will verify. If the sensor does beep on the second application at the group of 2, then the person is in either of the two people. The group can then again be divided into individuals, and then the sensor can be applied a third time to either of the individuals. If the sensor beeps, then we have found our person, if the sensor does not beep, then the last person is the person with height less than the limit.
+    
+    (b) 
   \end{solution}
 \end{questions}
 
