Weekly Challenge 1 - sol

--- a/wc01.tex
+++ b/wc01.tex
@@ -8,7 +8,7 @@
 \printanswers
 
 \title{Weekly Challenge 01: Comparison\\CS/MATH 113 Discrete Mathematics}
-\author{$\langle team-name \rangle$}  % <== for grading, replace with your team name, e.g. q1-team-420
+\author{Ali Muhammad Asad - TA}  % <== for grading, replace with your team name, e.g. q1-team-420
 \date{Habib University | Spring 2023}
 
 \qformat{{\large\bf \thequestion. \thequestiontitle}\hfill}
@@ -37,7 +37,7 @@ Schmidty \cite{schmidt} has grown old and his vision is weak. He can no longer s
     He uses his sensor first at the group of 3. If it does not beep, then he can infer that the group of 2 will have the person with height less than the limit. So he can again divide the group of 2 into individuals, and apply the sensor a second time on either of the person. If it the sensor beeps, then we have found our person. If the sensor does not beep at the person, then the sensor can be applied a third time on the last person, in which case it will beep. \\ 
     If the sensor does beep at the group of 3 people in the first application, then he can again divide the group of 3 into a group of 2 and 1 (again the order does not matter). He applied the sensor then a second time at the group of 2; if it does not beep, then the last person will be the one with height less than the limit and a third application of the sensor will verify. If the sensor does beep on the second application at the group of 2, then the person is in either of the two people. The group can then again be divided into individuals, and then the sensor can be applied a third time to either of the individuals. If the sensor beeps, then we have found our person, if the sensor does not beep, then the last person is the person with height less than the limit.
     
-    (b) 
+    (b) For a family of size $n$, the family can be divided into two such that there are two groups of size $ \frac{n}{2} $ and then the sensor can be applied to either of the group. If it beeps then the person is in that group, else the person is in the other group. Then the group of $ \frac{n}{2} $ will again be divided into two such that there are two groups of $ \frac{n}{4} $ and again the sensor will be applied to either of the two groups. If the sensor beeps, then the person belongs to that group, else the person belongs to the other group. The process can be repeated until we are left with two individuals, and the sensor can then be used on either of the two. Then the least number of times the sensor has to be used turns out to be $ \log_{2}n + 1$.
   \end{solution}
 \end{questions}
 
