--- a/ps02.tex
+++ b/ps02.tex
@@ -5,7 +5,7 @@
 \usepackage{geometry}
 \usepackage{venndiagram}
 \usepackage{graphicx}
-
+\usepackage{xcolor}
 % Header and footer.
 \pagestyle{headandfoot}
 \runningheadrule
@@ -32,7 +32,7 @@
 \begin{document}
 \maketitle
 \section{Problems}
-
+\begin{sloppypar}
 \begin{problem}{1}
 Let $p$ and $q$ be the proposition
 \begin{itemize}
@@ -229,7 +229,7 @@ A and B. Determine, if possible, what A and B are if they address you in the way
         Then if A is a knave, and B is a knight, then there is no contradiction here, as A is telling a lie which holds true as a knave must always tell lies, and B is telling the truth that A is a knave. \\ 
         Therefore, A is a knave and B is a knight. 
 
-        (c)  
+        (c) If A is a knave, then he is telling the truth about himself, that he is a knave which implies his statement is true. But knaves always lie, so his statement should be false, therefore A cannot be a knave. Then A is a knight.\\ Now we know that A is a knight, so in A's statement, ``I am a knave'' is a not true, so for the statement to be true, ``B is a knight'' must be true. \\ Then it can be concluded that A is a knight, and B is a knight.
 
         (d) It cannot be determined as both statements can hold true in either scenarios. If A is a knight, he is telling the truth so is true, but if A is not a knight, the he is lying which means he is a knave, which is also true. \\ The same argument holds true for B, therefore A and B cannot be determined.
 
@@ -237,11 +237,20 @@ A and B. Determine, if possible, what A and B are if they address you in the way
     \end{solution}
 \end{questions}
 
+\pagebreak
 \begin{problem}{5}
 Three friends are hanging out at a Cafe. The server approaches them and ask ``Who wants a slice of cake ?'' The first friend says ``I don't know''.
 The second friend says ``I don't know''. Finally, the third friend says ``No, not everyone wants cake''. The serves comes back and gives slices of cake to the
 friends who want . How did the server figure out who wanted the cake ? 
 \end{problem}
+\begin{questions}
+    \question
+    \begin{solution}
+
+        (If the server was this smart then that server would never be serving in the first place. \\ Were those friends drunk? \\ 
+        Isn't that gonna be a bit rude btw in the real world scenario?)
+    \end{solution}
+\end{questions}
 
 \begin{problem}{6}
 Sheikh Chilly, famous for his bizarre sense of humor and love of logic puzzles, left the following clues
@@ -260,7 +269,28 @@ represent.
 \begin{questions}
     \question
     \begin{solution}
+        % Our propositions are as follows: \\ 
+        % $p$: ``The house is next to a lake'' \\ 
+        % $q$: ``The tresure is in the kitchen'' \\ 
+        % $r$: ``The treasure is buried under the flagpole'' \\ 
+        % $s$: ``The tree in the front yard is an elm'' \\ 
+        % $t$: ``The tree in the back yard is an oak'' \\ 
+        % $u$: ``The treasure is in the garage'' 
+
+        % The above situation in propositional logic can be represented as: \\ 
+        % 1: $ p \implies q $ \\ 
+        % 2: $ (\neg p \lor r) \implies (s \land \neg t) $ \\ 
+        % 3: $ u \implies \neg t $ \\ 
+        % 4: $ \neg r \implies \neg t $ \\ 
+        % 5: $ \neg q $
         
+        % Now we know that $ \neg q $ is true. \\ 
+        % % Then $ \neg q \implies \neg p $ (By Contrapositive) \\ 
+        % % So $ \neg p $ is true. 
+        % Then by Modus Tollens: \\ 
+        % $ p \implies q \\ \neg q \\ \therefore \neg p $ \\ 
+        % Then the house is not next to the lake. \\ 
+        % Then
     \end{solution}
 \end{questions}
 
@@ -279,6 +309,23 @@ Show that following are logically equivalent without using truth tables
     \question
     \begin{solution}
         
+        (a) $ (p \implies r) \lor (q \implies r)  \equiv  (p \land q) \implies r $ \\ 
+        LHS: \\ 
+        $ \neg((p \implies r) \lor \neg(q \implies r)) $ \hspace{10mm} {\color{red} [$ \neg (A \lor B) \equiv \neg A \land \neg B $]}\\ 
+        $ (p \land \neg r) \land (q \land \neg r) $ \hspace{21.5mm} {\color{red} [$ \neg (p \implies q) \equiv p \land \neg q $]}\\ 
+        $ (p \land q) \land \neg r $ \hspace{31mm} { \color{red} [Distributive Law]}\\ 
+        $ (p \land q) \implies r $ \hspace{27.5mm} { \color{red} [$ \neg (p\implies q) \equiv p \land \neg q $]} \\ 
+        RHS: \\ 
+        $ \neg ((p \land q) \implies r) $ \\ 
+        $ (p \land q) \land \neg r $ \\ 
+        $ (p \land \neg r) \land (q \land \neg r) $ \\ 
+        $ \neg ((p \land \neg r) \land (q \land \neg r)) $ \\ 
+        $ \neg (p \land \neg r) \lor \neg(q \land \neg r) $ \\ 
+        $ \neg \neg (p \implies r) \lor \neg \neg (q \implies r) $ \\ 
+        $ (p \implies r) \lor (q \implies r) $ 
+
+        \vspace{2mm}
+        (b)
     \end{solution}
 \end{questions}
 
@@ -299,5 +346,5 @@ Use Truth tables to see if the following statements are logically equivalent.
     \end{solution}
 
 \end{questions}
-
+\end{sloppypar}
 \end{document}
