--- a/wc03.tex
+++ b/wc03.tex
@@ -17,7 +17,7 @@
 \printanswers
 
 \title{Weekly Challenge 03: Logical Primitives\\CS/MATH 113 Discrete Mathematics}
-\author{Ali Muhammad Asad\\Dead TA}  % <== for grading, replace with your team name, e.g. q1-team-420
+\author{$\langle team-name \rangle$}  % <== for grading, replace with your team name, e.g. q1-team-420
 \date{Habib University | Spring 2023}
 
 \qformat{{\large\bf \thequestion. \thequestiontitle}\hfill}
